--- a/KafkaConnectPublisher/KafkaConnectPublisher.csproj
+++ b/KafkaConnectPublisher/KafkaConnectPublisher.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.3.0-RC1" />
+    <PackageReference Include="Confluent.Kafka" Version="1.3.0" />
   </ItemGroup>
 
 
